--- a/BackEnd/JeeAccount/src/app/_metronic/partials/layout/extras/offcanvas/user-offcanvas/user-offcanvas.component.html
+++ b/BackEnd/JeeAccount/src/app/_metronic/partials/layout/extras/offcanvas/user-offcanvas/user-offcanvas.component.html
@@ -3,10 +3,7 @@
   <ng-container *ngIf="user$ as _user">
     <!--begin::Header-->
     <div class="offcanvas-header d-flex align-items-center justify-content-between pb-5">
-      <h3 class="font-weight-bold m-0">
-        User Profile
-        <small class="text-muted font-size-sm ml-2">12 messages</small>
-      </h3>
+      <span class="title" translate="profile.thongtincanhan"></span>
       <a href="#" class="btn btn-xs btn-icon btn-light btn-hover-primary" id="kt_quick_user_close">
         <i class="ki ki-close icon-xs text-muted"></i>
       </a>
@@ -18,39 +15,72 @@
       <!--begin::Header-->
       <div class="d-flex align-items-center mt-5">
         <div class="symbol symbol-100 mr-5">
-          <div class="symbol-label" style="background-image: url('./assets/media/users/300_21.jpg');"></div>
-          <i class="symbol-badge bg-success"></i>
+          <ngx-avatar
+            [size]="80"
+            src="{{ _user.user.customData.personalInfo.Avatar }}"
+            *ngIf="_user.user.customData.personalInfo.Avatar; else bindText"
+          >
+          </ngx-avatar>
+          <ng-template #bindText>
+            <ngx-avatar
+              textSizeRatio="2.5"
+              matTooltip="{{ _user.user.customData.personalInfo.Fullname }}"
+              [size]="80"
+              [name]="_user.user.customData.personalInfo.Name.slice(0, 1)"
+              bgColor="{{ _user.user.customData.personalInfo.BgColor }}"
+            >
+            </ngx-avatar>
+          </ng-template>
         </div>
-        <div class="d-flex flex-column">
-          <a href="#" class="font-weight-bold font-size-h5 text-dark-75 text-hover-primary">
-            <!-- {{ _user.user.customData.FullName }} -->
-            Full Name
-          </a>
-          <div class="text-muted mt-1">
-            Application Developer
+        <div class="d-flex flex-column" style="line-height: 2">
+          <!-- <a href="#" class="font-weight-bold font-size-h5 text-dark-75 text-hover-primary">
+            {{ _user.user.customData.personalInfo.Fullname }}
+          </a> -->
+          <div class="hoten">
+            {{ _user.user.customData.personalInfo.Fullname }}
           </div>
+          <div class="chucvu">
+            {{ _user.user.customData.personalInfo.Jobtitle }}
+          </div>
+        </div>
+      </div>
+      <div class="d-flex align-items-center mt-5" style="justify-content: flex-end">
+        <div class="symbol symbol-100 mr-5"></div>
+        <div class="d-flex flex-column">
           <div class="navi mt-2">
-            <a href="#" class="navi-item">
-              <span class="navi-link p-0 pb-2">
-                <span class="navi-icon mr-1">
-                  <span [inlineSVG]="
-                      './assets/media/svg/icons/Communication/Mail-notification.svg'
-                    " cacheSVG="true" class="svg-icon svg-icon-lg svg-icon-primary"></span>
-                </span>
-                <span class="navi-text text-muted text-hover-primary">email</span>
-              </span>
-            </a>
-
-            <a class="btn btn-sm btn-light-primary font-weight-bolder py-2 px-5 cursor-pointer" (click)="logout()">Sign
-              Out</a>
+            <a class="btn btn-sm quanlytaikhoan py-2 px-5 cursor-pointer" (click)="quanlytaikhoan()">{{
+              'profile.quanlytaikhoan' | translate
+            }}</a>
+            <a class="btn btn-sm dangxuat py-2 px-5 cursor-pointer" (click)="logout()">{{ 'profile.dangxuat' | translate }}</a>
           </div>
         </div>
       </div>
       <!--end::Header-->
 
       <!--begin::Separator-->
-      <div class="separator separator-dashed mt-8 mb-5"></div>
+      <!-- <div class="separator separator-dashed mt-8 mb-5"></div> -->
+      <div class="separator mt-8 mb-5" style="border: 1px solid #d1d1d1"></div>
       <!--end::Separator-->
+
+      <!--begin::Header-->
+      <div class="offcanvas-header d-flex align-items-center justify-content-between pb-5">
+        <span class="nhacnho" translate="profile.nhacnho"></span>
+      </div>
+      <div class="row link" *ngFor="let app of listNhacNho" (click)="ChangeLink(app)">
+        <div class="col-md-9 kt--margin-bottom-10-mobile">
+          <span class="svg-icon menu-icon" style="padding: 0 10px">
+            <i *ngIf="app.WebAppIcon" class="kt-menu__link-icon" [ngClass]="app.WebAppIcon"></i>
+          </span>
+          <span class="nhacnho-text">{{ app.LoaiNhacNho }}</span>
+        </div>
+        <div class="col-md-3 kt--margin-bottom-10-mobile" style="text-align: end">
+          <span class="soluong">{{ app.Soluong }}</span>
+          <span class="svg-icon menu-icon" style="padding: 0 10px">
+            <i class="ki ki-bold-arrow-next icon-xs" style="color: #050505; margin-left: 20px"></i>
+          </span>
+        </div>
+      </div>
+      <!--end::Header-->
 
       <!--begin::Nav-->
       <!-- <div class="navi navi-spacer-x-0 p-0">
