--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-edit-dialog/account-management-edit-dialog.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-edit-dialog/account-management-edit-dialog.component.html
@@ -1,13 +1,15 @@
 <div class="modal-content">
   <div class="modal-header">
     <div class="modal-title h4" id="example-modal-sizes-title-lg">
-      <span class="dialog-title">{{'ACCOUNTMANAGEMENT.THEMMOITAIKHOAN' | translate}}</span>
+      <span class="dialog-title">{{ 'ACCOUNTMANAGEMENT.THEMMOITAIKHOAN' | translate }}</span>
     </div>
-    <div class="modal-title" style="display: inline;">
-      <button mat-raised-button style="float: right; margin: 0" class="ja_btn-addnew  "
-        (click)="onSubmit()">{{'COMMOM.LUU' | translate}}</button>
-      <button mat-raised-button style="float: right; margin: 0; margin-right: 12px;" class="ja_btn-goback "
-        (click)="goBack()">{{'COMMOM.TROLAI' | translate}}</button>
+    <div class="modal-title" style="display: inline">
+      <button mat-raised-button style="float: right; margin: 0" class="ja_btn-addnew" (click)="onSubmit()">
+        {{ 'COMMOM.LUU' | translate }}
+      </button>
+      <button mat-raised-button style="float: right; margin: 0; margin-right: 12px" class="ja_btn-goback" (click)="goBack()">
+        {{ 'COMMOM.TROLAI' | translate }}
+      </button>
     </div>
   </div>
   <div class="overlay overlay-block cursor-default modal-body overflow-auto">
@@ -18,76 +20,82 @@
             <div class="row">
               <div class="col-lg-8">
                 <mat-form-field class="example-full-width">
-                  <input formControlName="AnhDaiDien" placeholder="Ảnh đại diện" matInput readonly>
+                  <input formControlName="AnhDaiDien" placeholder="Ảnh đại diện" matInput readonly />
                 </mat-form-field>
               </div>
               <div class="col-lg-4">
-                <input style="display: none;" accept="image/jpg, image/jpeg, image/png" formControlName="file" id="file"
-                  type="file" class="form-control" (change)="onFileChange($event)" #hiddenfileinput>
-                <button mat-raised-button class="ja_button ja_btn-addnew"
-                  (click)="hiddenfileinput.click()">Browse</button>
+                <input
+                  style="display: none"
+                  accept="image/jpg, image/jpeg, image/png"
+                  formControlName="file"
+                  id="file"
+                  type="file"
+                  class="form-control"
+                  (change)="onFileChange($event)"
+                  #hiddenfileinput
+                />
+                <button mat-raised-button class="ja_button ja_btn-addnew" (click)="hiddenfileinput.click()">Browse</button>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-12">
                 <mat-form-field class="example-full-width">
-                  <input class="input-batbuoc mat-focused" formControlName="HoTen" placeholder="Họ và tên" matInput
-                    required>
+                  <input class="input-batbuoc mat-focused" formControlName="HoTen" placeholder="Họ và tên" matInput required />
                 </mat-form-field>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-12">
                 <mat-form-field class="example-full-width">
-                  <input class="input-batbuoc mat-focused" formControlName="SoDienThoai" placeholder="Số điện thoại"
-                    matInput>
+                  <input class="input-batbuoc mat-focused" formControlName="SoDienThoai" placeholder="Số điện thoại" matInput />
                 </mat-form-field>
               </div>
             </div>
           </div>
           <div class="col-lg-6">
-            <img [src]="imgFile" style="width:auto; height:160px">
+            <img [src]="imgFile" style="width: auto; height: 160px" />
           </div>
           <div class="col-lg-6">
             <mat-form-field class="example-full-width">
               <mat-select formControlName="PhongBan" placeholder="Phòng ban" #singleSelect>
                 <mat-option>
-                  <ngx-mat-select-search noEntriesFoundLabel="Không tìm thấy" placeholderLabel="Thêm quản phòng ban"
-                    formControlName="PhongBanFilterCtrl">
+                  <ngx-mat-select-search
+                    noEntriesFoundLabel="Không tìm thấy"
+                    placeholderLabel="Tìm kiếm phòng ban"
+                    formControlName="PhongBanFilterCtrl"
+                  >
                   </ngx-mat-select-search>
                 </mat-option>
                 <mat-option *ngFor="let phongban of filterPhongBans | async" [value]="phongban.RowID">
-                  {{phongban.DeparmentName}}
+                  {{ phongban.DeparmentName }}
                 </mat-option>
               </mat-select>
             </mat-form-field>
           </div>
           <div class="col-lg-6">
             <mat-form-field class="example-full-width">
-              <input class="input-batbuoc mat-focused" formControlName="ChucVu" placeholder="Chức vụ" matInput required>
+              <input class="input-batbuoc mat-focused" formControlName="ChucVu" placeholder="Chức vụ" matInput required />
             </mat-form-field>
           </div>
           <div class="col-lg-6">
             <mat-form-field class="example-full-width">
-              <span matPrefix style=" color: #760b0b;">{{CompanyCode}}.</span>
-              <input class="input-batbuoc mat-focused" formControlName="TenDangNhap" placeholder="Tên đăng nhập"
-                matInput required>
+              <span matPrefix style="color: #760b0b">{{ CompanyCode }}.</span>
+              <input class="input-batbuoc mat-focused" formControlName="TenDangNhap" placeholder="Tên đăng nhập" matInput required />
             </mat-form-field>
           </div>
           <div class="col-lg-6">
             <mat-form-field class="example-full-width">
-              <input class="input-batbuoc mat-focused" formControlName="Email" placeholder="Email" matInput required>
+              <input class="input-batbuoc mat-focused" formControlName="Email" placeholder="Email" matInput required />
             </mat-form-field>
           </div>
           <div class="col-lg-6">
             <mat-form-field class="example-full-width">
-              <input type="password" class="require" formControlName="MatKhau" placeholder="Mật khẩu" matInput required>
+              <input type="password" class="require" formControlName="MatKhau" placeholder="Mật khẩu" matInput required />
             </mat-form-field>
           </div>
           <div class="col-lg-6">
             <mat-form-field class="example-full-width">
-              <input type="password" class="require" formControlName="NhapLaiMatKhau" placeholder="Nhập lại mật khẩu"
-                matInput required>
+              <input type="password" class="require" formControlName="NhapLaiMatKhau" placeholder="Nhập lại mật khẩu" matInput required />
             </mat-form-field>
           </div>
           <div class="col-lg-12">
@@ -98,10 +106,14 @@
               <input type="checkbox" [formControlName]="i">
               {{listApp[i].AppName}} &nbsp; &nbsp;
             </label> -->
-            <section >
-              <mat-checkbox class="example-margin" formArrayName="AppsCheckbox"
-                *ngFor="let app of AppsFromArray.controls; let i = index" [formControlName]="i">
-                {{listApp[i].AppName}}
+            <section>
+              <mat-checkbox
+                class="example-margin"
+                formArrayName="AppsCheckbox"
+                *ngFor="let app of AppsFromArray.controls; let i = index"
+                [formControlName]="i"
+              >
+                {{ listApp[i].AppName }}
               </mat-checkbox>
             </section>
           </div>
