--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/quan-ly-truc-tiep-edit-dialog/quan-ly-truc-tiep-edit-dialog.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/quan-ly-truc-tiep-edit-dialog/quan-ly-truc-tiep-edit-dialog.component.html
@@ -1,40 +1,51 @@
-<div class="m-portlet">
-  <div class="m-portlet__head">
-    <div class="m-portlet__head-title">
-      <div class="row" style="display: inline">
-        <h5 class="m-portlet__head-text">
-          <span class="dialog-title">Quản lý trực tiếp</span>
-          <button mat-button style="float: right; margin: 0" class="ja_button mat-button ja_btn-addnew"
-            (click)="onSubmit()">Thêm</button>
-          <button mat-button style="float: right; margin: 0; margin-right: 12px;"
-            class="ja_button mat-button ja_btn-goback" (click)="goBack()">Đóng</button>
-        </h5>
-      </div>
+<div class="modal-content">
+  <div class="modal-header">
+    <div class="modal-title h4" id="example-modal-sizes-title-lg">
+      <span class="dialog-title">{{ 'ACCOUNTMANAGEMENT.QUANLYTRUCTIEP' | translate }}</span>
+    </div>
+    <div class="modal-title" style="display: inline">
+      <button
+        [disabled]="isLoadingSubmit$ | async"
+        [class.spinner]="isLoadingSubmit$ | async"
+        mat-raised-button
+        style="float: right; margin: 0"
+        class="ja_btn-addnew"
+        (click)="onSubmit()"
+      >
+        {{ 'COMMOM.LUU' | translate }}
+      </button>
+      <button mat-raised-button style="float: right; margin: 0; margin-right: 12px" class="ja_btn-goback" (click)="goBack()">
+        {{ 'COMMOM.TROLAI' | translate }}
+      </button>
     </div>
   </div>
-  <div class="m-form m-form--fit m-form--label-align-right m-form--group-seperator-dashed">
-    <div class="m-portlet__body">
-      <form [formGroup]="itemForm" class="m-form m-form--group-seperator-dashed">
-        <div class="m-form__section m-form__section--first">
-          <div class="row m-form__group">
-            <div class="col-md-12 m--margin-bottom-10-mobile">
-              <mat-form-field class="mat-form-field-fluid">
-                <mat-select formControlName="QuanLyNhom" placeholder="Quản lý nhóm" #singleSelect>
-                  <mat-option>
-                    <ngx-mat-select-search noEntriesFoundLabel="Không tìm thấy" placeholderLabel="Thêm quản lý nhóm"
-                      formControlName="FilterQuanLyNhom"></ngx-mat-select-search>
-                  </mat-option>
-                  <mat-option *ngFor="let thanhvien of filterQuanLys | async" [value]="thanhvien.Username">
-                    {{thanhvien.Display}}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
+  <div class="overlay overlay-block cursor-default modal-body overflow-auto">
+    <ng-container *ngIf="isLoading$ | async">
+      <div class="overlay-layer bg-transparent">
+        <div class="spinner spinner-lg spinner-success"></div>
+      </div>
+    </ng-container>
+    <ng-container>
+      <form action="#" class="form form-label-right" [formGroup]="itemForm">
+        <div class="form-group row">
+          <div class="col-lg-12">
+            <mat-form-field class="example-full-width">
+              <mat-select formControlName="QuanLyNhom" placeholder="{{ 'ACCOUNTMANAGEMENT.QUANLYTRUCTIEP' | translate }}" #singleSelect>
+                <mat-option>
+                  <ngx-mat-select-search
+                    noEntriesFoundLabel="{{ 'ACCOUNTMANAGEMENT.KHONGTIMTHAY' | translate }}"
+                    placeholderLabel="{{ 'ACCOUNTMANAGEMENT.THEMQUANLYTRUCTIEP' | translate }}"
+                    formControlName="FilterQuanLyNhom"
+                  ></ngx-mat-select-search>
+                </mat-option>
+                <mat-option *ngFor="let thanhvien of filterQuanLys | async" [value]="thanhvien.Username">
+                  {{ thanhvien.Display }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
           </div>
         </div>
       </form>
-    </div>
-    <div class="m-portlet__foot m-portlet__no-border m-portlet__foot--fit text-right">
-    </div>
+    </ng-container>
   </div>
 </div>
