--- a/BackEnd/JeeAccount/src/app/pages/_layout/components/topbar/topbar.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/_layout/components/topbar/topbar.component.html
@@ -1,120 +1,157 @@
+<style>
+  .width {
+    width: 383px;
+  }
+</style>
 <!--begin::Topbar-->
-<ng-container *ngIf="extraSearchDisplay">
-  <!-- <ng-container *ngIf="extrasSearchLayout === 'offcanvas'"> 
+<ng-container *ngIf="extrasNotificationsDisplay">
+  <ng-container *ngIf="extrasNotificationsLayout === 'offcanvas'">
+    <!--begin::Notifications-->
     <div class="topbar-item">
-      <div class="btn btn-icon btn-clean btn-lg mr-1" id="kt_quick_search_toggle">
-        <span [inlineSVG]="'./assets/media/svg/icons/General/Search.svg'" cacheSVG="true"
-          class="svg-icon svg-icon-xl svg-icon-primary"></span>
+      <div class="btn btn-icon btn-icon-mobile btn-clean btn-lg mr-1 pulse pulse-primary" id="kt_quick_notifications_toggle">
+        <!-- <span [inlineSVG]="'./assets/media/svg/icons/Code/Compiling.svg'" cacheSVG="true"
+      class="svg-icon svg-icon-xl svg-icon-primary"></span> -->
+        <i class="flaticon2-bell-2" style="color: #3699ff"></i>
+        <span class="pulse-ring"></span>
       </div>
-    </div> 
+    </div>
+    <!--end::Notifications-->
   </ng-container>
 
-  <ng-container *ngIf="extrasSearchLayout === 'dropdown'" id="kt_quick_search_toggle">
-    <div class="dropdown" id="kt_quick_search_toggle" autoClose="outside" ngbDropdown> 
-      <div class="topbar-item" ngbDropdownToggle>
-        <div class="btn btn-icon btn-clean btn-lg btn-dropdown mr-1">
-          <span [inlineSVG]="'./assets/media/svg/icons/General/Search.svg'" cacheSVG="true"
-            class="svg-icon svg-icon-xl svg-icon-primary"></span>
+  <ng-container *ngIf="extrasNotificationsLayout === 'dropdown'">
+    <!--begin::Notifications-->
+    <div class="dropdown" ngbDropdown placement="bottom">
+      <div class="topbar-item" data-toggle="dropdown" data-offset="10px,0px" ngbDropdownToggle>
+        <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1 pulse pulse-primary">
+          <!-- <span [inlineSVG]="'./assets/media/svg/icons/Code/Compiling.svg'" cacheSVG="true"
+        class="svg-icon svg-icon-xl svg-icon-primary"></span> -->
+          <i [ngClass]="{ Notify: numberInfo > 0 }" class="flaticon2-bell-2" style="color: #3699ff"></i>
+          <span class="badge" *ngIf="numberInfo > 0">{{ numberInfo }}</span>
+          <span class="pulse-ring"></span>
         </div>
-      </div> 
-      <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-lg" ngbDropdownMenu>
-        <app-search-dropdown-inner></app-search-dropdown-inner>
-      </div> 
+      </div>
+      <div ngbDropdownMenu class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-lg width">
+        <form>
+          <app-notifications-dropdown-inner (loadUnreadList)="updateNumberNoti($event)"></app-notifications-dropdown-inner>
+        </form>
+      </div>
     </div>
+    <!--end::Notifications-->
   </ng-container>
 </ng-container>
 
-<ng-container *ngIf="extrasNotificationsDisplay">
-  <ng-container *ngIf="extrasNotificationsLayout === 'offcanvas'"> 
+<ng-container *ngIf="extraSearchDisplay">
+  <ng-container *ngIf="extrasSearchLayout === 'offcanvas'">
+    <!--begin::Search-->
     <div class="topbar-item">
-      <div class="btn btn-icon btn-icon-mobile btn-clean btn-lg mr-1 pulse pulse-primary"
-        id="kt_quick_notifications_toggle">
-        <span [inlineSVG]="'./assets/media/svg/icons/Code/Compiling.svg'" cacheSVG="true"
-          class="svg-icon svg-icon-xl svg-icon-primary"></span>
-        <span class="pulse-ring"></span>
+      <div class="btn btn-icon btn-clean btn-lg mr-1" id="kt_quick_search_toggle">
+        <span
+          [inlineSVG]="'./assets/media/svg/icons/Communication/Group-chat.svg'"
+          cacheSVG="true"
+          class="svg-icon svg-icon-xl svg-icon-primary"
+        ></span>
       </div>
-    </div> 
+    </div>
+    <!--end::Search-->
   </ng-container>
 
-  <ng-container *ngIf="extrasNotificationsLayout === 'dropdown'"> 
-    <div class="dropdown" ngbDropdown placement="bottom"> 
-      <div class="topbar-item" data-toggle="dropdown" data-offset="10px,0px" ngbDropdownToggle>
-        <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1 pulse pulse-primary">
-          <span [inlineSVG]="'./assets/media/svg/icons/Code/Compiling.svg'" cacheSVG="true"
-            class="svg-icon svg-icon-xl svg-icon-primary"></span>
-          <span class="pulse-ring"></span>
+  <ng-container *ngIf="extrasSearchLayout === 'dropdown'" id="kt_quick_search_toggle">
+    <div class="dropdown" id="kt_quick_search_toggle" autoClose="outside" ngbDropdown>
+      <div class="topbar-item" ngbDropdownToggle>
+        <div class="btn btn-icon btn-clean btn-lg btn-dropdown mr-1">
+          <span
+            [inlineSVG]="'./assets/media/svg/icons/Communication/Group-chat.svg'"
+            cacheSVG="true"
+            class="svg-icon svg-icon-xl svg-icon-primary"
+          ></span>
         </div>
-      </div> 
-      <div ngbDropdownMenu class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-lg">
-        <form>
-          <app-notifications-dropdown-inner></app-notifications-dropdown-inner>
-        </form>
-      </div> 
-    </div> 
+      </div>
+
+      <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-lg" ngbDropdownMenu>
+        <app-search-dropdown-inner></app-search-dropdown-inner>
+      </div>
+    </div>
   </ng-container>
 </ng-container>
 
 <ng-container *ngIf="extrasQuickActionsDisplay">
-  <ng-container *ngIf="extrasQuickActionsLayout === 'offcanvas'"> 
+  <ng-container *ngIf="extrasQuickActionsLayout === 'offcanvas'">
+    <!--begin::Quick Actions-->
     <div class="topbar-item">
       <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1" id="kt_quick_actions_toggle">
-        <span [inlineSVG]="'./assets/media/svg/icons/Media/Equalizer.svg'" cacheSVG="true"
-          class="svg-icon svg-icon-xl svg-icon-primary"></span>
+        <span
+          [inlineSVG]="'./assets/media/svg/icons/Layout/Layout-4-blocks.svg'"
+          cacheSVG="true"
+          class="svg-icon svg-icon-xl svg-icon-primary"
+        ></span>
+        <!-- <i class="flaticon2-menu-2" style="color: #3699ff;"></i> -->
       </div>
-    </div> 
+    </div>
+    <!--end::Quick Actions-->
   </ng-container>
-  <ng-container *ngIf="extrasQuickActionsLayout === 'dropdown'"> 
-    <div class="dropdown" ngbDropdown placement="bottom"> 
+  <ng-container *ngIf="extrasQuickActionsLayout === 'dropdown'">
+    <!--begin::Quick Actions-->
+    <div class="dropdown" ngbDropdown placement="bottom">
       <div class="topbar-item" data-toggle="dropdown" data-offset="10px,0px" ngbDropdownToggle>
         <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1">
-          <span [inlineSVG]="'./assets/media/svg/icons/Media/Equalizer.svg'" cacheSVG="true"
-            class="svg-icon svg-icon-xl svg-icon-primary"></span>
+          <span
+            [inlineSVG]="'./assets/media/svg/icons/Layout/Layout-4-blocks.svg'"
+            cacheSVG="true"
+            class="svg-icon svg-icon-xl svg-icon-primary"
+          ></span>
+          <!-- <i class="flaticon2-menu-2" style="color: #3699ff;"></i> -->
         </div>
-      </div> 
+      </div>
       <div class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-lg" ngbDropdownMenu>
         <app-quick-actions-dropdown-inner></app-quick-actions-dropdown-inner>
-      </div> 
-    </div> 
+      </div>
+    </div>
+    <!--end::Quick Actions-->
   </ng-container>
 </ng-container>
 
 <ng-container *ngIf="extrasCartDisplay">
-  <ng-container *ngIf="extrasCartLayout === 'offcanvas'"> 
-    <div class="topbar-item">
-      <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1" id="kt_quick_cart_toggle">
-        <span [inlineSVG]="'./assets/media/svg/icons/Shopping/Cart3.svg'" cacheSVG="true"
-          class="svg-icon svg-icon-xl svg-icon-primary"></span>
-      </div>
-    </div> 
+  <ng-container *ngIf="extrasCartLayout === 'offcanvas'">
+    <!--begin::Cart-->
+    <!-- <div class="topbar-item">
+  <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1" id="kt_quick_cart_toggle">
+    <span [inlineSVG]="'./assets/media/svg/icons/Shopping/Cart3.svg'" cacheSVG="true"
+      class="svg-icon svg-icon-xl svg-icon-primary"></span>
+  </div>
+</div> -->
+    <!--end::Cart-->
   </ng-container>
-  <ng-container *ngIf="extrasCartLayout === 'dropdown'"> 
-    <div class="dropdown" ngbDropdown placement="bottom"> 
-      <div class="topbar-item" data-toggle="dropdown" data-offset="10px,0px" ngbDropdownToggle>
-        <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1">
-          <span [inlineSVG]="'./assets/media/svg/icons/Shopping/Cart3.svg'" cacheSVG="true"
-            class="svg-icon svg-icon-xl svg-icon-primary"></span>
-        </div>
-      </div> 
-      <div ngbDropdownMenu class="dropdown-menu p-0 m-0 dropdown-menu-xl dropdown-menu-anim-up">
-        <form>
-          <app-cart-dropdown-inner></app-cart-dropdown-inner>
-        </form>
-      </div> 
-    </div> 
-  </ng-container>
-</ng-container>
-
-<ng-container *ngIf="extrasQuickPanelDisplay"> 
-  <div class="topbar-item">
-    <div class="btn btn-icon btn-clean btn-lg mr-1" id="kt_quick_panel_toggle">
-      <span [inlineSVG]="'./assets/media/svg/icons/Layout/Layout-4-blocks.svg'" cacheSVG="true"
+  <ng-container *ngIf="extrasCartLayout === 'dropdown'">
+    <!--begin::Cart-->
+    <!-- <div class="dropdown" ngbDropdown placement="bottom">
+  <div class="topbar-item" data-toggle="dropdown" data-offset="10px,0px" ngbDropdownToggle>
+    <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1">
+      <span [inlineSVG]="'./assets/media/svg/icons/Shopping/Cart3.svg'" cacheSVG="true"
         class="svg-icon svg-icon-xl svg-icon-primary"></span>
     </div>
-  </div> 
+  </div>
+  <div ngbDropdownMenu class="dropdown-menu p-0 m-0 dropdown-menu-xl dropdown-menu-anim-up">
+    <form>
+      <app-cart-dropdown-inner></app-cart-dropdown-inner>
+    </form>
+  </div>
+</div> -->
+    <!--end::Cart-->
+  </ng-container>
 </ng-container>
 
-<ng-container *ngIf="extrasLanguagesDisplay">
-  <app-language-selector style="margin-top: 10px;"></app-language-selector>
+<ng-container *ngIf="extrasQuickPanelDisplay">
+  <!--begin::Quick panel-->
+  <!-- <div class="topbar-item">
+<div class="btn btn-icon btn-clean btn-lg mr-1" id="kt_quick_panel_toggle">
+  <span [inlineSVG]="'./assets/media/svg/icons/Layout/Layout-4-blocks.svg'" cacheSVG="true"
+    class="svg-icon svg-icon-xl svg-icon-primary"></span>
+</div>
+</div> -->
+  <!--end::Quick panel-->
+</ng-container>
+<!-- <ng-container *ngIf="extrasLanguagesDisplay">
+<app-language-selector style="margin-top: 10px;"></app-language-selector>
 </ng-container> -->
 
 <ng-container *ngIf="extrasUserDisplay">
@@ -122,20 +159,28 @@
     <ng-container *ngIf="user$ as _user">
       <!--begin::User-->
       <div class="topbar-item">
-        <div class="btn btn-icon btn-icon-mobile w-auto btn-clean d-flex align-items-center btn-lg px-2"
-          id="kt_quick_user_toggle">
-          <span class="text-muted font-weight-bold font-size-base d-none d-md-inline mr-1">Hi,</span>
-          <span
-            class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">
-            <!-- {{ _user.user.customData.FullName }} -->
-            FullName
-
+        <div
+          class="btn btn-icon btn-icon-mobile w-auto btn-clean d-flex align-items-center btn-lg"
+          id="kt_quick_user_toggle"
+          style="margin: 0; background: #ebf5ed; border-radius: 50px; height: 50px"
+        >
+          <span class="symbol symbol-lg-35 symbol-25 symbol-light-success mr-3">
+            <ngx-avatar
+              src="{{ _user.user.customData.personalInfo.Avatar }}"
+              *ngIf="_user.user.customData.personalInfo.Avatar; else bindText"
+            >
+            </ngx-avatar>
+            <ng-template #bindText>
+              <ngx-avatar
+                textSizeRatio="2.5"
+                [name]="_user.user.customData.personalInfo.Name.slice(0, 1)"
+                bgColor="{{ _user.user.customData.personalInfo.BgColor }}"
+              >
+              </ngx-avatar>
+            </ng-template>
           </span>
-          <span class="symbol symbol-lg-35 symbol-25 symbol-light-success">
-            <span class="symbol-label font-size-h5 font-weight-bold">
-              <!-- {{_user.user.customData.Ten}} -->
-              S
-          </span>
+          <span class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">
+            {{ _user.user.customData.personalInfo.Name }}
           </span>
         </div>
       </div>
@@ -150,19 +195,19 @@
         <div class="topbar-item" data-toggle="dropdown" data-offset="0px,0px" ngbDropdownToggle>
           <div class="btn btn-icon w-auto btn-clean d-flex align-items-center btn-lg px-2">
             <span class="text-muted font-weight-bold font-size-base d-none d-md-inline mr-1">Hi,</span>
-            <span
-              class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">{{ _user.fullname }}</span>
+            <span class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">{{ _user.fullname }}</span>
             <span class="symbol symbol-35 symbol-light-success">
-              <span class="symbol-label font-size-h5 font-weight-bold">{{
+              <span class="symbol-label font-size-h5 font-weight-bold"
+                >{{
                 <!-- _user.fullname | firstLetter -->
-              }}</span>
+                }}</span
+              >
             </span>
           </div>
         </div>
         <!--end::Toggle-->
         <!--begin::Dropdown-->
-        <div ngbDropdownMenu
-          class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-lg p-0">
+        <div ngbDropdownMenu class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-lg p-0">
           <!-- <app-user-dropdown-inner></app-user-dropdown-inner> -->
         </div>
       </div>
