--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/DepartmentManagement/department-management-list/department-management-list.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/DepartmentManagement/department-management-list/department-management-list.component.html
@@ -9,7 +9,7 @@
   </div>
   <!-- body -->
   <div class="card-body">
-    <div class="table-responsive angular-bootstrap-table" [ngStyle]="{ height: getHeight() }">
+    <div class="table-responsive angular-bootstrap-table">
       <table mat-table class=" table table-head-custom table-vertical-center overflow-hidden " [dataSource]="dataSource"
         matSort matSortActive="Fullname" matSortDirection="asc" matSortDisableClear>
 
