--- a/BackEnd/JeeAccount/src/app/pages/_layout/layout.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/_layout/layout.component.html
@@ -13,49 +13,40 @@
     <div class="d-flex flex-row flex-column-fluid page">
       <!-- begin:: Aside Left -->
       <ng-container *ngIf="asideSelfDisplay">
-        <!-- <ng-container *ngIf="asideMenuStatic"> 
+        <!-- <ng-container *ngIf="asideMenuStatic">
           <app-aside
             #ktAside
             id="kt_aside"
             class="aside aside-left d-flex flex-column flex-row-auto"
             [ngClass]="asideCSSClasses"
-          ></app-aside> 
+          ></app-aside>
         </ng-container>
-        <ng-container *ngIf="!asideMenuStatic"> 
+        <ng-container *ngIf="!asideMenuStatic">
           <app-aside-dynamic
             #ktAside
             id="kt_aside"
             class="aside aside-left d-flex flex-column flex-row-auto"
             [ngClass]="asideCSSClasses"
-          ></app-aside-dynamic> 
+          ></app-aside-dynamic>
         </ng-container> -->
 
         <app-aside-dynamic
-            #ktAside
-            id="kt_aside"
-            class="aside aside-left d-flex flex-column flex-row-auto"
-            [ngClass]="asideCSSClasses"
-          ></app-aside-dynamic>
+          #ktAside
+          id="kt_aside"
+          class="aside aside-left d-flex flex-column flex-row-auto"
+          [ngClass]="asideCSSClasses"
+        ></app-aside-dynamic>
       </ng-container>
       <!-- end:: Aside Left -->
 
       <!--begin::Wrapper-->
       <div class="d-flex flex-column flex-row-fluid wrapper" id="kt_wrapper">
         <!-- begin:: Header -->
-        <app-header
-          #ktHeader
-          id="kt_header"
-          class="header"
-          [ngClass]="headerCSSClasses"
-        ></app-header>
+        <app-header #ktHeader id="kt_header" class="header" [ngClass]="headerCSSClasses"></app-header>
         <!-- end:: Header -->
 
         <!-- begin:: Content -->
-        <div
-          class="content d-flex flex-column flex-column-fluid"
-          id="kt_content"
-          [ngClass]="contentClasses"
-        >
+        <div class="content d-flex flex-column flex-column-fluid" id="kt_content" [ngClass]="contentClasses">
           <!-- begin:: Content Head -->
           <ng-container *ngIf="subheaderDisplay">
             <app-subheader-wrapper></app-subheader-wrapper>
@@ -82,13 +73,7 @@
         </div>
         <!-- end:: Content -->
         <ng-container *ngIf="footerDisplay">
-         
-          <app-footer
-            class="footer bg-white py-4 d-flex flex-lg-column w-100"
-            id="kt_footer"
-            [ngClass]="footerCSSClasses"
-          ></app-footer>
-          
+          <app-footer class="footer bg-white py-4 d-flex flex-lg-column w-100" id="kt_footer" [ngClass]="footerCSSClasses"></app-footer>
         </ng-container>
       </div>
       <!--end::Wrapper-->
@@ -136,4 +121,13 @@
   </div>
 </ng-template>
 <app-scripts-init></app-scripts-init>
+<div>
+  <app-chat-box
+    *ngFor="let item of chatBoxUsers"
+    [right]="item.right"
+    [user]="item"
+    (removeChatBox)="removeChatBox($event)"
+    (activedChatBoxEvent)="activedChatBox($event)"
+  ></app-chat-box>
+</div>
 <!--end::Main-->
