--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-list/account-management-list.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-list/account-management-list.component.html
@@ -14,19 +14,15 @@
       <!-- end: Filtration form -->
     </div>
     <div class="card-toolbar">
-      <button mat-button class="ja_button ja_btn-addnew" (click)="create()">{{ 'COMMOM.THEMMOI' | translate }}</button>
+      <button mat-raised-button class="ja_button ja_btn-addnew" (click)="create()">{{ 'COMMOM.THEMMOI' | translate }}</button>
     </div>
   </div>
   <!-- body -->
   <div class="card-body">
-    <div class="table-responsive angular-bootstrap-table">
-      <table
-        mat-table
-        class="table table-head-custom table-vertical-center overflow-hidden"
-        [dataSource]="accountManagementService.items$ | async"
-      >
-        <ng-container matColumnDef="NhanVien">
-          <th mat-header-cell *matHeaderCellDef>
+    <div class="table-responsive angular-bootstrap-table" [ngStyle]="{ height: getHeight() }">
+      <table class="table table-head-custom table-vertical-center overflow-hidden">
+        <thead>
+          <th class="pl-16">
             <span>{{ 'ACCOUNTMANAGEMENT.NHANVIEN' | translate }}</span>
             <app-sort-icon
               column="nhanvien"
@@ -35,31 +31,8 @@
               (sort)="sort($event)"
             ></app-sort-icon>
           </th>
-          <td mat-cell *matCellDef="let r">
-            <div class="row jee-avatar">
-              <span (click)="hiddenfileinput.click()" style="cursor: pointer">
-                <ngx-avatar [size]="40" src="{{ r.Avatar }}" *ngIf="r.Avatar"></ngx-avatar>
-                <ngx-avatar [size]="40" [name]="r.Name" bgColor="{{ r.BgColor }}" *ngIf="!r.Avatar"></ngx-avatar>
-              </span>
-              <span class="jee-name">
-                {{ r.Fullname }}
-              </span>
-            </div>
-            <input
-              style="display: none"
-              accept="image/jpg, image/jpeg, image/png"
-              name="Image"
-              id="file"
-              type="file"
-              class="form-control"
-              (change)="onFileChange($event, r.Username)"
-              #hiddenfileinput
-            />
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="TenDangNhap">
-          <th mat-header-cell *matHeaderCellDef>
-            <span>Tên đăng nhập</span>
+          <th>
+            <span>{{ 'COMMOM.USERNAME' | translate }}</span>
             <app-sort-icon
               column="tendangnhap"
               [activeColumn]="sorting.column"
@@ -67,16 +40,8 @@
               (sort)="sort($event)"
             ></app-sort-icon>
           </th>
-          <td mat-cell *matCellDef="let r">
-            <div class>
-              <span *ngIf="r.Username != ''">{{ r.Username }}</span>
-            </div>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="ChucVu">
-          <th mat-header-cell *matHeaderCellDef>
-            <span>Chức vụ</span>
+          <th>
+            <span>{{ 'COMMOM.CHUCVU' | translate }}</span>
             <app-sort-icon
               column="chucvu"
               [activeColumn]="sorting.column"
@@ -84,28 +49,11 @@
               (sort)="sort($event)"
             ></app-sort-icon>
           </th>
-          <td mat-cell *matCellDef="let r">
-            <span *ngIf="r.Jobtitle != ''">{{ r.Jobtitle }}</span>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="QuanLyTrucTiep">
-          <th mat-header-cell *matHeaderCellDef style="text-align: center">
-            <span>Quản lý trực tiếp</span>
+          <th>
+            <span>{{ 'ACCOUNTMANAGEMENT.QUANLYTRUCTIEP' | translate }}</span>
           </th>
-          <td mat-cell *matCellDef="let r" style="text-align: center">
-            <div style="cursor: pointer" (click)="openQuanLyTrucTiepEdit(r.Username, r.DirectManager)">
-              <span *ngIf="r.DirectManager != ''">{{ r.DirectManager }}</span>
-              <span *ngIf="r.DirectManager == ''">
-                <mat-icon>person_add</mat-icon>
-              </span>
-            </div>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="TinhTrang">
-          <th mat-header-cell *matHeaderCellDef style="text-align: center">
-            <span>Tình trạng</span>
+          <th>
+            <span>{{ 'COMMOM.TINHTRANG' | translate }}</span>
             <app-sort-icon
               column="tinhtrang"
               [activeColumn]="sorting.column"
@@ -113,40 +61,67 @@
               (sort)="sort($event)"
             ></app-sort-icon>
           </th>
-          <td mat-cell *matCellDef="let r" style="text-align: center">
-            <mat-slide-toggle class="example-margin" (click)="changeTinhTrang(r.Username)" [checked]="r.IsActive"> </mat-slide-toggle>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="GhiChu">
-          <th mat-header-cell *matHeaderCellDef>
-            <span>Ghi chú</span>
+          <th>
+            <span>{{ 'COMMOM.GHICHU' | translate }}</span>
           </th>
-          <td mat-cell *matCellDef="let r">
-            <span>{{ r.Note }}</span>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="ThaoTac">
-          <th mat-header-cell *matHeaderCellDef style="text-align: center">
-            <span>Thao tác</span>
+          <th>
+            <span>{{ 'COMMOM.THAOTAC' | translate }}</span>
           </th>
-          <td mat-cell *matCellDef="let r" style="text-align: center">
-            <mat-icon (click)="update(r)" style="cursor: pointer; color: #1bc5bd; font-size: 16px" aria-hidden="false"> mode_edit</mat-icon>
-            &nbsp;
-            <mat-icon (click)="delete(r)" style="cursor: pointer; color: red; font-size: 16px" aria-hidden="false">delete </mat-icon>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr
-          mat-row
-          *matRowDef="let row; columns: displayedColumns"
-          (click)="row.highlighted = !row.highlighted"
-          [ngClass]="{ hovered: row.hovered, highlighted: row.highlighted }"
-          (mouseover)="row.hovered = true"
-          (mouseout)="row.hovered = false"
-        ></tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let r of accountManagementService.items$ | async">
+            <td class="pl-8">
+              <div>
+                <div class="row" (click)="hiddenfileinput.click()" style="cursor: pointer">
+                  <ngx-avatar [size]="40" src="{{ r.Avatar }}" *ngIf="r.Avatar"></ngx-avatar>
+                  <ngx-avatar [size]="40" [name]="r.Name" bgColor="{{ r.BgColor }}" *ngIf="!r.Avatar"></ngx-avatar>
+                  <span class="pl-3" style="align-self: center">
+                    {{ r.Fullname }}
+                  </span>
+                </div>
+              </div>
+              <input
+                style="display: none"
+                accept="image/jpg, image/jpeg, image/png"
+                name="Image"
+                id="file"
+                type="file"
+                class="form-control"
+                (change)="onFileChange($event, r.Username)"
+                #hiddenfileinput
+              />
+            </td>
+            <td>
+              <div>
+                <span>{{ r.Username }}</span>
+              </div>
+            </td>
+            <td>
+              <span>{{ r.Jobtitle }}</span>
+            </td>
+            <td>
+              <div style="cursor: pointer" (click)="openQuanLyTrucTiepEdit(r.Username, r.DirectManager)">
+                <span *ngIf="r.DirectManager != ''">{{ r.DirectManager }}</span>
+                <span *ngIf="r.DirectManager == ''">
+                  <mat-icon>person_add</mat-icon>
+                </span>
+              </div>
+            </td>
+            <td>
+              <mat-slide-toggle class="example-margin" (click)="changeTinhTrang(r.Username)" [checked]="r.IsActive"> </mat-slide-toggle>
+            </td>
+            <td>
+              <span>{{ r.Note }}</span>
+            </td>
+            <td>
+              <mat-icon (click)="update(r)" style="cursor: pointer; color: #1bc5bd; font-size: 16px" aria-hidden="false">
+                mode_edit</mat-icon
+              >
+              &nbsp;
+              <mat-icon (click)="delete(r)" style="cursor: pointer; color: red; font-size: 16px" aria-hidden="false">delete </mat-icon>
+            </td>
+          </tr>
+        </tbody>
       </table>
     </div>
     <!-- end: Table -->
