--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/DepartmentManagement/department-management-list/department-management-list.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/DepartmentManagement/department-management-list/department-management-list.component.html
@@ -10,9 +10,15 @@
   <!-- body -->
   <div class="card-body">
     <div class="table-responsive angular-bootstrap-table">
-      <table mat-table class=" table table-head-custom table-vertical-center overflow-hidden " [dataSource]="dataSource"
-        matSort matSortActive="Fullname" matSortDirection="asc" matSortDisableClear>
-
+      <table
+        mat-table
+        class="table table-head-custom table-vertical-center overflow-hidden"
+        [dataSource]="dataSource"
+        matSort
+        matSortActive="Fullname"
+        matSortDirection="asc"
+        matSortDisableClear
+      >
         <ng-container matColumnDef="PhongBan">
           <th mat-header-cell *matHeaderCellDef>
             <span>Phòng ban</span>
@@ -40,8 +46,7 @@
             <span>Tình trạng</span>
           </th>
           <td mat-cell *matCellDef="let r" style="text-align: center">
-            <mat-slide-toggle class="example-margin" (click)="changeTinhTrang(r.RowID)" [checked]="r.IsActive">
-            </mat-slide-toggle>
+            <mat-slide-toggle class="example-margin" (click)="changeTinhTrang(r.RowID)" [checked]="r.IsActive"> </mat-slide-toggle>
           </td>
         </ng-container>
 
@@ -58,24 +63,31 @@
             <span>Thao tác</span>
           </th>
           <td mat-cell *matCellDef="let r" style="text-align: center">
-            <mat-icon (click)="update(r)" style="cursor: pointer; color: #1BC5BD; font-size:16px" aria-hidden="false">
-              mode_edit</mat-icon>
+            <mat-icon (click)="update(r)" style="cursor: pointer; color: #1bc5bd; font-size: 16px" aria-hidden="false"> mode_edit</mat-icon>
             &nbsp;
-            <mat-icon (click)="delete(r)" style="cursor: pointer; color: red; font-size:16px" aria-hidden="false">delete
-            </mat-icon>
+            <mat-icon (click)="delete(r)" style="cursor: pointer; color: red; font-size: 16px" aria-hidden="false">delete </mat-icon>
           </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="row.highlighted = !row.highlighted;"
-          [ngClass]="{ hovered: row.hovered, highlighted: row.highlighted }" (mouseover)="row.hovered = true"
-          (mouseout)="row.hovered = false"></tr>
+        <tr
+          mat-row
+          *matRowDef="let row; columns: displayedColumns"
+          (click)="row.highlighted = !row.highlighted"
+          [ngClass]="{ hovered: row.hovered, highlighted: row.highlighted }"
+          (mouseover)="row.hovered = true"
+          (mouseout)="row.hovered = false"
+        ></tr>
       </table>
     </div>
     <!-- start: BOTTOM -->
     <div class="mat-table__bottom">
-      <mat-spinner [diameter]="20" *ngIf="dataSource.loading$| async"></mat-spinner>
-      <mat-paginator [pageSize]="pageSize" [pageSizeOptions]="[10, 20, 50, 100]"
-        [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>
+      <mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
+      <mat-paginator
+        [pageSize]="pageSize"
+        [pageSizeOptions]="[10, 20, 50, 100]"
+        [length]="dataSource.paginatorTotal$ | async"
+        [showFirstLastButtons]="true"
+      ></mat-paginator>
     </div>
     <!-- end: BOTTOM -->
   </div>
