--- a/BackEnd/JeeAccount/src/app/_metronic/partials/layout/extras/dropdown-inner/notifications-dropdown-inner/notifications-dropdown-inner.component.html
+++ b/BackEnd/JeeAccount/src/app/_metronic/partials/layout/extras/dropdown-inner/notifications-dropdown-inner/notifications-dropdown-inner.component.html
@@ -32,7 +32,7 @@
     [ngClass]="getActiveCSSClasses('topbar_notifications_notifications')"
   >
     <!--begin::Scroll-->
-    <div class="scroll pr-7 mr-n7 ps" style="position: relative; max-height: 360px" perfectScrollbar>
+    <div class="scroll pr-7 mr-n7 ps" style="position: relative; max-height: 360px" [perfectScrollbar]="">
       <div class="min-h-200px">
         <div *ngIf="listNoti && listNoti.length == 0">
           <div style="margin-left: 100px; margin-top: 50px">{{ 'Common.chuacothongbao' | translate }}</div>
