--- a/BackEnd/JeeAccount/src/app/_metronic/partials/layout/subheader/subheader3/subheader3.component.html
+++ b/BackEnd/JeeAccount/src/app/_metronic/partials/layout/subheader/subheader3/subheader3.component.html
@@ -1,21 +1,11 @@
 <!--begin::Subheader-->
-<div
-  class="subheader py-2 py-lg-4"
-  id="kt_subheader"
-  [ngClass]="subheaderCSSClasses"
->
-  <div
-    [ngClass]="subheaderContainerCSSClasses"
-    class="d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap"
-  >
+<div class="subheader py-2 py-lg-4" id="kt_subheader" [ngClass]="subheaderCSSClasses">
+  <div [ngClass]="subheaderContainerCSSClasses" class="d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
     <!--begin::Info-->
     <div class="d-flex align-items-center flex-wrap mr-2">
       <ng-container *ngIf="subheaderMobileToggle">
         <!--begin::Mobile Toggle-->
-        <button
-          class="burger-icon burger-icon-left mr-4 d-inline-block d-lg-none"
-          id="kt_subheader_mobile_toggle"
-        >
+        <button class="burger-icon burger-icon-left mr-4 d-inline-block d-lg-none" id="kt_subheader_mobile_toggle">
           <span></span>
         </button>
         <!--end::Mobile Toggle-->
@@ -35,15 +25,11 @@
       <!--end::Page Title-->
 
       <!--begin::Actions-->
-      <div
-        class="subheader-separator subheader-separator-ver mt-2 mb-2 mr-4 bg-gray-200"
-      ></div>
+      <div class="subheader-separator subheader-separator-ver mt-2 mb-2 mr-4 bg-gray-200"></div>
 
       <span class="text-muted font-weight-bold mr-4">#XRS-45670</span>
 
-      <a class="btn btn-light-warning font-weight-bolder btn-sm cursor-pointer">
-        Add New
-      </a>
+      <a class="btn btn-light-warning font-weight-bolder btn-sm cursor-pointer"> Add New </a>
       <!--end::Actions-->
     </div>
     <!--end::Info-->
@@ -51,21 +37,9 @@
     <!--begin::Toolbar-->
     <div class="d-flex align-items-center">
       <!--begin::Actions-->
-      <a
-        class="btn btn-clean btn-sm font-weight-bold font-size-base mr-1 cursor-pointer"
-      >
-        Today
-      </a>
-      <a
-        class="btn btn-clean btn-sm font-weight-bold font-size-base mr-1 cursor-pointer"
-      >
-        Month
-      </a>
-      <a
-        class="btn btn-clean btn-sm font-weight-bold font-size-base mr-1 cursor-pointer"
-      >
-        Year
-      </a>
+      <a class="btn btn-clean btn-sm font-weight-bold font-size-base mr-1 cursor-pointer"> Today </a>
+      <a class="btn btn-clean btn-sm font-weight-bold font-size-base mr-1 cursor-pointer"> Month </a>
+      <a class="btn btn-clean btn-sm font-weight-bold font-size-base mr-1 cursor-pointer"> Year </a>
       <!--end::Actions-->
 
       <ng-container *ngIf="subheaderDisplayDaterangepicker">
@@ -77,16 +51,8 @@
           title="Select dashboard daterange"
           data-placement="left"
         >
-          <span
-            class="text-muted font-size-base font-weight-bold mr-2"
-            id="kt_dashboard_daterangepicker_title"
-            >Today</span
-          >
-          <span
-            class="text-primary font-size-base font-weight-bolder"
-            id="kt_dashboard_daterangepicker_date"
-            >Aug 16</span
-          >
+          <span class="text-muted font-size-base font-weight-bold mr-2" id="kt_dashboard_daterangepicker_title">Today</span>
+          <span class="text-primary font-size-base font-weight-bolder" id="kt_dashboard_daterangepicker_date">Aug 16</span>
         </a>
         <!--end::Daterange-->
       </ng-container>
@@ -109,14 +75,11 @@
         >
           <span
             [inlineSVG]="'./assets/media/svg/icons/Files/File-plus.svg'"
-            cacheSVG="true"
+            [cacheSVG]="true"
             class="svg-icon svg-icon-success svg-icon-lg"
           ></span>
         </a>
-        <div
-          ngbDropdownMenu
-          class="dropdown-menu p-0 m-0 dropdown-menu-md dropdown-menu-right py-3"
-        >
+        <div ngbDropdownMenu class="dropdown-menu p-0 m-0 dropdown-menu-md dropdown-menu-right py-3">
           <app-dropdown-menu4></app-dropdown-menu4>
         </div>
       </div>
