--- a/BackEnd/JeeAccount/src/app/modules/user-profile/change-password/change-password.component.html
+++ b/BackEnd/JeeAccount/src/app/modules/user-profile/change-password/change-password.component.html
@@ -34,7 +34,7 @@
           <div class="alert-icon">
             <span class="svg-icon svg-icon-3x svg-icon-danger"
               [inlineSVG]="'./assets/media/svg/icons/Code/Info-circle.svg'"
-              cacheSVG="true"
+              [cacheSVG]="true"
             >
             </span>
           </div>
@@ -60,7 +60,7 @@
               autocomplete="off"
               formControlName="currentPassword"
               [class.is-invalid]="isControlInvalid('currentPassword')"
-              [class.is-valid]="isControlValid('currentPassword')" 
+              [class.is-valid]="isControlValid('currentPassword')"
             />
             <div class="valid-feedback" *ngIf="isControlValid('currentPassword')">Current password was entered correct</div>
             <div class="invalid-feedback" *ngIf="controlHasError('required', 'currentPassword')">First name is required</div>
@@ -76,7 +76,7 @@
               autocomplete="off"
               formControlName="password"
               [class.is-invalid]="isControlInvalid('password')"
-              [class.is-valid]="isControlValid('password')" 
+              [class.is-valid]="isControlValid('password')"
             />
           </div>
         </div>
@@ -89,10 +89,10 @@
               autocomplete="off"
               formControlName="cPassword"
               [class.is-invalid]="isControlInvalid('cPassword')"
-              [class.is-valid]="isControlValid('cPassword')" 
+              [class.is-valid]="isControlValid('cPassword')"
             />
             <div class="valid-feedback" *ngIf="isControlValid('cPassword')">Password confirmation was entered correct</div>
-            <div class="invalid-feedback" *ngIf="controlHasError('ConfirmPassword', 'cPassword')">'Passsword' and 'Confirm Password' didn't match.</div> 
+            <div class="invalid-feedback" *ngIf="controlHasError('ConfirmPassword', 'cPassword')">'Passsword' and 'Confirm Password' didn't match.</div>
           </div>
         </div>
       </div>
