--- a/BackEnd/JeeAccount/src/app/pages/_layout/components/aside-dynamic/aside-dynamic.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/_layout/components/aside-dynamic/aside-dynamic.component.html
@@ -2,19 +2,13 @@
 <div class="brand flex-column-auto" id="kt_brand" [ngClass]="brandClasses">
   <!--begin::Logo-->
   <a routerLink="/" class="brand-logo">
-    <img alt="Logo" style="width: 100px;" [attr.src]="headerLogo" />
+    <img alt="Logo" style="width: 100px" [attr.src]="headerLogo" />
   </a>
   <!--end::Logo-->
 
   <ng-container *ngIf="asideSelfMinimizeToggle">
     <button class="brand-toggle btn btn-sm px-0" id="kt_aside_toggle">
-      <span
-        [inlineSVG]="
-          './assets/media/svg/icons/Navigation/Angle-double-left.svg'
-        "
-        cacheSVG="true"
-        class="svg-icon svg-icon-xl"
-      ></span>
+      <span [inlineSVG]="'./assets/media/svg/icons/Navigation/Angle-double-left.svg'" [cacheSVG]="true" class="svg-icon svg-icon-xl"></span>
     </button>
   </ng-container>
 </div>
@@ -48,10 +42,7 @@
             [ngTemplateOutlet]="menuItemSectionTemplate"
             [ngTemplateOutletContext]="{ item: item }"
           ></ng-container>
-          <ng-container
-            *ngIf="item.separator"
-            [ngTemplateOutlet]="menuItemSeparatorTemplate"
-          ></ng-container>
+          <ng-container *ngIf="item.separator" [ngTemplateOutlet]="menuItemSeparatorTemplate"></ng-container>
           <ng-container
             *ngIf="item.title"
             [ngTemplateOutlet]="menu1LevelTemplate"
@@ -70,21 +61,11 @@
 <ng-template #menu1LevelTemplate let-item="item">
   <!-- begin::if don't have submenu -->
   <ng-container *ngIf="!item.submenu">
-    <li
-      class="menu-item"
-      aria-haspopup="true"
-      routerLinkActive="menu-item-active"
-    >
+    <li class="menu-item" aria-haspopup="true" routerLinkActive="menu-item-active">
       <a class="menu-link" [routerLink]="item.page" routerLinkActive="active">
-        <span
-          [inlineSVG]="item.svg"
-          cacheSVG="true"
-          class="svg-icon menu-icon"
-        ></span>
+        <span [inlineSVG]="item.svg" [cacheSVG]="true" class="svg-icon menu-icon"></span>
         <!-- <i *ngIf="item.icon" class="kt-menu__link-icon" [ngClass]="item.icon"></i> -->
-        <span class="menu-text" [translate]="item.translate">{{
-          item.title
-        }}</span>
+        <span class="menu-text" [translate]="item.translate">{{ item.title }}</span>
       </a>
     </li>
   </ng-container>
@@ -107,16 +88,14 @@
       >
         <!-- <span
           [inlineSVG]="item.svg"
-          cacheSVG="true"
+          [cacheSVG]="true"
           class="svg-icon menu-icon"
         ></span> -->
         <span class="svg-icon menu-icon">
           <i *ngIf="item.icon" class="kt-menu__link-icon" [ngClass]="item.icon"></i>
         </span>
-        
-        <span class="menu-text" [translate]="item.translate">{{
-          item.title
-        }}</span>
+
+        <span class="menu-text" [translate]="item.translate">{{ item.title }}</span>
         <i class="menu-arrow"></i>
       </a>
       <div class="menu-submenu">
@@ -124,9 +103,7 @@
         <ul class="menu-subnav">
           <li class="menu-item menu-item-parent" aria-haspopup="true">
             <span class="menu-link">
-              <span class="menu-text" [translate]="item.translate">{{
-                item.title
-              }}</span>
+              <span class="menu-text" [translate]="item.translate">{{ item.title }}</span>
             </span>
           </li>
           <ng-container
@@ -146,19 +123,12 @@
 <ng-template #menu2LevelTemplate let-item="item">
   <!-- begin::if don't have submenu -->
   <ng-container *ngIf="!item.submenu">
-    <li
-      class="menu-item"
-      routerLinkActive="menu-item-active"
-      aria-haspopup="true"
-      data-menu-toggle="hover"
-    >
+    <li class="menu-item" routerLinkActive="menu-item-active" aria-haspopup="true" data-menu-toggle="hover">
       <a class="menu-link" [routerLink]="item.page" routerLinkActive="active">
         <i class="menu-bullet menu-bullet-dot">
           <span></span>
         </i>
-        <span class="menu-text" [translate]="item.translate">{{
-          item.title
-        }}</span>
+        <span class="menu-text" [translate]="item.translate">{{ item.title }}</span>
       </a>
     </li>
   </ng-container>
@@ -182,9 +152,7 @@
         <i class="menu-bullet menu-bullet-dot">
           <span></span>
         </i>
-        <span class="menu-text" [translate]="item.translate">{{
-          item.title
-        }}</span>
+        <span class="menu-text" [translate]="item.translate">{{ item.title }}</span>
         <i class="menu-arrow"></i>
       </a>
       <div class="menu-submenu">
@@ -206,18 +174,12 @@
 
 <!-- begin::3 Level -->
 <ng-template #menu3LevelTemplate let-item="item">
-  <li
-    class="menu-item"
-    aria-haspopup="true"
-    routerLinkActive="menu-item-active"
-  >
+  <li class="menu-item" aria-haspopup="true" routerLinkActive="menu-item-active">
     <a class="menu-link" [routerLink]="item.page" routerLinkActive="active">
       <i class="menu-bullet menu-bullet-dot">
         <span></span>
       </i>
-      <span class="menu-text" [translate]="item.translate">{{
-        item.title
-      }}</span>
+      <span class="menu-text" [translate]="item.translate">{{ item.title }}</span>
     </a>
   </li>
 </ng-template>
