--- a/BackEnd/JeeAccount/src/app/_metronic/partials/layout/extras/dropdown-inner/cart-dropdown-inner/cart-dropdown-inner.component.html
+++ b/BackEnd/JeeAccount/src/app/_metronic/partials/layout/extras/dropdown-inner/cart-dropdown-inner/cart-dropdown-inner.component.html
@@ -14,7 +14,7 @@
   <!--begin::Header-->
   <div
     class="d-flex align-items-center py-10 px-8 bgi-size-cover bgi-no-repeat rounded-top"
-    style="background-image: url('./assets/media/misc/bg-1.jpg');"
+    style="background-image: url('./assets/media/misc/bg-1.jpg')"
   >
     <span class="btn btn-md btn-icon bg-white-o-15 mr-4">
       <i class="flaticon2-shopping-cart-1 text-success"></i>
@@ -26,36 +26,18 @@
 </ng-container>
 
 <!--begin::Scroll-->
-<div
-  class="scroll scroll-push"
-  data-scroll="true"
-  style="position: relative; max-height: 250px;"
-  perfectScrollbar
->
+<div class="scroll scroll-push" data-scroll="true" style="position: relative; max-height: 250px" [perfectScrollbar]="">
   <!--begin::Item-->
   <div class="d-flex align-items-center justify-content-between p-8">
     <div class="d-flex flex-column mr-2">
-      <a
-        href="#"
-        class="font-weight-bold text-dark-75 font-size-lg text-hover-primary"
-      >
-        iBlender
-      </a>
-      <span class="text-muted">
-        Best kichen gadget in 2020
-      </span>
+      <a href="#" class="font-weight-bold text-dark-75 font-size-lg text-hover-primary"> iBlender </a>
+      <span class="text-muted"> Best kichen gadget in 2020 </span>
       <div class="d-flex align-items-center mt-2">
-        <span class="font-weight-bold mr-1 text-dark-75 font-size-lg"
-          >$ 350</span
-        >
+        <span class="font-weight-bold mr-1 text-dark-75 font-size-lg">$ 350</span>
         <span class="text-muted mr-1">for</span>
         <span class="font-weight-bold mr-2 text-dark-75 font-size-lg">5</span>
-        <a href="#" class="btn btn-xs btn-light-success btn-icon mr-2"
-          ><i class="ki ki-minus icon-xs"></i
-        ></a>
-        <a href="#" class="btn btn-xs btn-light-success btn-icon"
-          ><i class="ki ki-plus icon-xs"></i
-        ></a>
+        <a href="#" class="btn btn-xs btn-light-success btn-icon mr-2"><i class="ki ki-minus icon-xs"></i></a>
+        <a href="#" class="btn btn-xs btn-light-success btn-icon"><i class="ki ki-plus icon-xs"></i></a>
       </div>
     </div>
     <a href="#" class="symbol symbol-70 flex-shrink-0">
@@ -71,27 +53,14 @@
   <!--begin::Item-->
   <div class="d-flex align-items-center justify-content-between p-8">
     <div class="d-flex flex-column mr-2">
-      <a
-        href="#"
-        class="font-weight-bold text-dark-75 font-size-lg text-hover-primary"
-      >
-        SmartCleaner
-      </a>
-      <span class="text-muted">
-        Smart tool for cooking
-      </span>
+      <a href="#" class="font-weight-bold text-dark-75 font-size-lg text-hover-primary"> SmartCleaner </a>
+      <span class="text-muted"> Smart tool for cooking </span>
       <div class="d-flex align-items-center mt-2">
-        <span class="font-weight-bold mr-1 text-dark-75 font-size-lg"
-          >$ 650</span
-        >
+        <span class="font-weight-bold mr-1 text-dark-75 font-size-lg">$ 650</span>
         <span class="text-muted mr-1">for</span>
         <span class="font-weight-bold mr-2 text-dark-75 font-size-lg">4</span>
-        <a href="#" class="btn btn-xs btn-light-success btn-icon mr-2"
-          ><i class="ki ki-minus icon-xs"></i
-        ></a>
-        <a href="#" class="btn btn-xs btn-light-success btn-icon"
-          ><i class="ki ki-plus icon-xs"></i
-        ></a>
+        <a href="#" class="btn btn-xs btn-light-success btn-icon mr-2"><i class="ki ki-minus icon-xs"></i></a>
+        <a href="#" class="btn btn-xs btn-light-success btn-icon"><i class="ki ki-plus icon-xs"></i></a>
       </div>
     </div>
     <a href="#" class="symbol symbol-70 flex-shrink-0">
@@ -107,27 +76,14 @@
   <!--begin::Item-->
   <div class="d-flex align-items-center justify-content-between p-8">
     <div class="d-flex flex-column mr-2">
-      <a
-        href="#"
-        class="font-weight-bold text-dark-75 font-size-lg text-hover-primary"
-      >
-        CameraMax
-      </a>
-      <span class="text-muted">
-        Professional camera for edge cutting shots
-      </span>
+      <a href="#" class="font-weight-bold text-dark-75 font-size-lg text-hover-primary"> CameraMax </a>
+      <span class="text-muted"> Professional camera for edge cutting shots </span>
       <div class="d-flex align-items-center mt-2">
-        <span class="font-weight-bold mr-1 text-dark-75 font-size-lg"
-          >$ 150</span
-        >
+        <span class="font-weight-bold mr-1 text-dark-75 font-size-lg">$ 150</span>
         <span class="text-muted mr-1">for</span>
         <span class="font-weight-bold mr-2 text-dark-75 font-size-lg">3</span>
-        <a href="#" class="btn btn-xs btn-light-success btn-icon mr-2"
-          ><i class="ki ki-minus icon-xs"></i
-        ></a>
-        <a href="#" class="btn btn-xs btn-light-success btn-icon"
-          ><i class="ki ki-plus icon-xs"></i
-        ></a>
+        <a href="#" class="btn btn-xs btn-light-success btn-icon mr-2"><i class="ki ki-minus icon-xs"></i></a>
+        <a href="#" class="btn btn-xs btn-light-success btn-icon"><i class="ki ki-plus icon-xs"></i></a>
       </div>
     </div>
     <a href="#" class="symbol symbol-70 flex-shrink-0">
@@ -143,24 +99,14 @@
   <!--begin::Item-->
   <div class="d-flex align-items-center justify-content-between p-8">
     <div class="d-flex flex-column mr-2">
-      <a href="#" class="font-weight-bold text-dark text-hover-primary">
-        4DPrinter
-      </a>
-      <span class="text-muted">
-        Manufactoring unique objects
-      </span>
+      <a href="#" class="font-weight-bold text-dark text-hover-primary"> 4DPrinter </a>
+      <span class="text-muted"> Manufactoring unique objects </span>
       <div class="d-flex align-items-center mt-2">
-        <span class="font-weight-bold mr-1 text-dark-75 font-size-lg"
-          >$ 1450</span
-        >
+        <span class="font-weight-bold mr-1 text-dark-75 font-size-lg">$ 1450</span>
         <span class="text-muted mr-1">for</span>
         <span class="font-weight-bold mr-2 text-dark-75 font-size-lg">7</span>
-        <a href="#" class="btn btn-xs btn-light-success btn-icon mr-2"
-          ><i class="ki ki-minus icon-xs"></i
-        ></a>
-        <a href="#" class="btn btn-xs btn-light-success btn-icon"
-          ><i class="ki ki-plus icon-xs"></i
-        ></a>
+        <a href="#" class="btn btn-xs btn-light-success btn-icon mr-2"><i class="ki ki-minus icon-xs"></i></a>
+        <a href="#" class="btn btn-xs btn-light-success btn-icon"><i class="ki ki-plus icon-xs"></i></a>
       </div>
     </div>
     <a href="#" class="symbol symbol-70 flex-shrink-0">
@@ -182,9 +128,7 @@
     <span class="font-weight-bolder text-primary text-right">$5640.00</span>
   </div>
   <div class="text-right">
-    <button type="button" class="btn btn-primary text-weight-bold">
-      Place Order
-    </button>
+    <button type="button" class="btn btn-primary text-weight-bold">Place Order</button>
   </div>
 </div>
 <!--end::Summary-->
