--- a/BackEnd/JeeAccount/src/app/_metronic/partials/layout/extras/dropdown-inner/search-dropdown-inner/search-result/search-result.component.html
+++ b/BackEnd/JeeAccount/src/app/_metronic/partials/layout/extras/dropdown-inner/search-dropdown-inner/search-result/search-result.component.html
@@ -1,11 +1,7 @@
 <ng-container *ngIf="data !== null">
   <!--begin::Wrapper-->
   <div class="quick-search-wrapper pt-5">
-    <div
-      [ngStyle]="{ 'max-height': '30vh', position: 'relative' }"
-      class="scroll"
-      perfectScrollbar
-    >
+    <div [ngStyle]="{ 'max-height': '30vh', position: 'relative' }" class="scroll">
       <div class="quick-search-result">
         <!-- Has Result -->
         <ng-container *ngIf="data.length > 0">
@@ -29,9 +25,7 @@
         </ng-container>
         <!-- No Result -->
         <ng-container *ngIf="data.length === 0">
-          <div class="text-muted d-none">
-            No record found
-          </div>
+          <div class="text-muted d-none">No record found</div>
         </ng-container>
       </div>
     </div>
@@ -40,9 +34,7 @@
 </ng-container>
 
 <ng-template #documentsTemplate let-item="item">
-  <div class="font-size-sm text-primary font-weight-bolder text-uppercase mb-2">
-    Documents
-  </div>
+  <div class="font-size-sm text-primary font-weight-bolder text-uppercase mb-2">Documents</div>
   <div class="mb-10">
     <ng-container *ngFor="let el of item.items">
       <div class="d-flex align-items-center flex-grow-1 mb-2">
@@ -64,17 +56,12 @@
 </ng-template>
 
 <ng-template #membersTemplate let-item="item">
-  <div class="font-size-sm text-primary font-weight-bolder text-uppercase mb-2">
-    Members
-  </div>
+  <div class="font-size-sm text-primary font-weight-bolder text-uppercase mb-2">Members</div>
   <div class="mb-10">
     <ng-container *ngFor="let el of item.items">
       <div class="d-flex align-items-center flex-grow-1 mb-2">
         <div class="symbol symbol-45 symbol-circle flex-shrink-0">
-          <div
-            class="symbol-label"
-            [ngStyle]="{ 'background-image': 'url(' + el.imgPath + ')' }"
-          ></div>
+          <div class="symbol-label" [ngStyle]="{ 'background-image': 'url(' + el.imgPath + ')' }"></div>
         </div>
         <div class="d-flex flex-column ml-3 mt-2 mb-2">
           <a href="#" class="font-weight-bold text-dark text-hover-primary">
@@ -90,9 +77,7 @@
 </ng-template>
 
 <ng-template #filesTemplate let-item="item">
-  <div class="font-size-sm text-primary font-weight-bolder text-uppercase mb-2">
-    Files
-  </div>
+  <div class="font-size-sm text-primary font-weight-bolder text-uppercase mb-2">Files</div>
   <div class="mb-10">
     <ng-container *ngFor="let el of item.items">
       <div class="d-flex align-items-center flex-grow-1 mb-2">
