--- a/BackEnd/JeeAccount/src/app/_metronic/partials/layout/extras/offcanvas/search-offcanvas/search-offcanvas.component.html
+++ b/BackEnd/JeeAccount/src/app/_metronic/partials/layout/extras/offcanvas/search-offcanvas/search-offcanvas.component.html
@@ -1,6 +1,6 @@
 <!--begin::Search Panel-->
 <div
-  id="kt_quick_search"  
+  id="kt_quick_search"
   class="offcanvas p-10"
   [ngClass]="extrasSearchOffcanvasDirectionCSSClass">
   <!--begin::Header-->
@@ -14,7 +14,7 @@
 		</a>
 	</div>
   <!--end::Header-->
-  
+
   <!--begin::Content-->
   <div class="offcanvas-content">
 		<!--begin::Container-->
@@ -24,7 +24,7 @@
 				<div class="input-group">
 					<div class="input-group-prepend">
 						<span class="input-group-text">
-              <span [inlineSVG]="'./assets/media/svg/icons/General/Search.svg'" cacheSVG="true" class="svg-icon svg-icon-lg"></span>
+              <span [inlineSVG]="'./assets/media/svg/icons/General/Search.svg'" [cacheSVG]="true" class="svg-icon svg-icon-lg"></span>
             </span>
 					</div>
 					<input type="text" class="form-control " placeholder="Search..."/>
