--- a/BackEnd/JeeAccount/src/app/_metronic/partials/layout/subheader/subheader2/subheader2.component.html
+++ b/BackEnd/JeeAccount/src/app/_metronic/partials/layout/subheader/subheader2/subheader2.component.html
@@ -1,21 +1,11 @@
 <!--begin::Subheader-->
-<div
-  class="subheader py-2 py-lg-6"
-  [ngClass]="subheaderCSSClasses"
-  id="kt_subheader"
->
-  <div
-    [ngClass]="subheaderContainerCSSClasses"
-    class="d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap"
-  >
+<div class="subheader py-2 py-lg-6" [ngClass]="subheaderCSSClasses" id="kt_subheader">
+  <div [ngClass]="subheaderContainerCSSClasses" class="d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
     <!--begin::Info-->
     <div class="d-flex align-items-center flex-wrap mr-2">
       <ng-container *ngIf="subheaderMobileToggle">
         <!--begin::Mobile Toggle-->
-        <button
-          class="burger-icon burger-icon-left mr-4 d-inline-block d-lg-none"
-          id="kt_subheader_mobile_toggle"
-        >
+        <button class="burger-icon burger-icon-left mr-4 d-inline-block d-lg-none" id="kt_subheader_mobile_toggle">
           <span></span>
         </button>
         <!--end::Mobile Toggle-->
@@ -34,15 +24,11 @@
       </ng-container>
       <!--end::Page Title-->
       <!--begin::Action-->
-      <div
-        class="subheader-separator subheader-separator-ver mt-2 mb-2 mr-4 bg-gray-200"
-      ></div>
+      <div class="subheader-separator subheader-separator-ver mt-2 mb-2 mr-4 bg-gray-200"></div>
 
       <span class="text-muted font-weight-bold mr-4">#XRS-45670</span>
 
-      <a href="#" class="btn btn-light-primary font-weight-bolder btn-sm">
-        Add New
-      </a>
+      <a href="#" class="btn btn-light-primary font-weight-bolder btn-sm"> Add New </a>
       <!--end::Action-->
     </div>
     <!--end::Info-->
@@ -50,27 +36,19 @@
     <!--begin::Toolbar-->
     <div class="d-flex align-items-center flex-wrap">
       <!--begin::Actions-->
-      <a
-        class="btn btn-bg-white btn-icon-info btn-hover-primary btn-icon mr-3 my-2 my-lg-0 cursor-pointer"
-      >
+      <a class="btn btn-bg-white btn-icon-info btn-hover-primary btn-icon mr-3 my-2 my-lg-0 cursor-pointer">
         <i class="flaticon2-file icon-md"></i>
       </a>
 
-      <a
-        class="btn btn-bg-white btn-icon-danger btn-hover-primary btn-icon mr-3 my-2 my-lg-0 cursor-pointer"
-      >
+      <a class="btn btn-bg-white btn-icon-danger btn-hover-primary btn-icon mr-3 my-2 my-lg-0 cursor-pointer">
         <i class="flaticon-download-1 icon-md"></i>
       </a>
 
-      <a
-        class="btn btn-bg-white btn-icon-success btn-hover-primary btn-icon mr-3 my-2 my-lg-0 cursor-pointer"
-      >
+      <a class="btn btn-bg-white btn-icon-success btn-hover-primary btn-icon mr-3 my-2 my-lg-0 cursor-pointer">
         <i class="flaticon2-fax icon-md"></i>
       </a>
 
-      <a
-        class="btn btn-bg-white btn-icon-warning btn-hover-primary btn-icon mr-3 my-2 my-lg-0 cursor-pointer"
-      >
+      <a class="btn btn-bg-white btn-icon-warning btn-hover-primary btn-icon mr-3 my-2 my-lg-0 cursor-pointer">
         <i class="flaticon2-settings icon-md"></i>
       </a>
       <!--end::Actions-->
@@ -84,16 +62,8 @@
           title="Select dashboard daterange"
           data-placement="left"
         >
-          <span
-            class="text-muted font-weight-bold mr-2"
-            id="kt_dashboard_daterangepicker_title"
-            >Today</span
-          >
-          <span
-            class="text-primary font-weight-bolder"
-            id="kt_dashboard_daterangepicker_date"
-            >Aug 16</span
-          >
+          <span class="text-muted font-weight-bold mr-2" id="kt_dashboard_daterangepicker_title">Today</span>
+          <span class="text-primary font-weight-bolder" id="kt_dashboard_daterangepicker_date">Aug 16</span>
         </a>
         <!--end::Daterange-->
       </ng-container>
@@ -116,16 +86,9 @@
         aria-expanded="false"
         ngbDropdownToggle
       >
-        <span
-          [inlineSVG]="'./assets/media/svg/icons/General/Settings-2.svg'"
-          cacheSVG="true"
-          class="svg-icon svg-icon-md"
-        ></span>
+        <span [inlineSVG]="'./assets/media/svg/icons/General/Settings-2.svg'" [cacheSVG]="true" class="svg-icon svg-icon-md"></span>
       </a>
-      <div
-        class="dropdown-menu p-0 sm-0 dropdown-menu-md dropdown-menu-right"
-        ngbDropdownMenu
-      >
+      <div class="dropdown-menu p-0 sm-0 dropdown-menu-md dropdown-menu-right" ngbDropdownMenu>
         <app-dropdown-menu1></app-dropdown-menu1>
       </div>
     </div>
