--- a/BackEnd/JeeAccount/src/app/_metronic/partials/layout/subheader/subheader4/subheader4.component.html
+++ b/BackEnd/JeeAccount/src/app/_metronic/partials/layout/subheader/subheader4/subheader4.component.html
@@ -1,37 +1,19 @@
 <!--begin::Subheader-->
-<div
-  class="subheader py-2 py-lg-4"
-  id="kt_subheader"
-  [ngClass]="subheaderCSSClasses"
->
-  <div
-    [ngClass]="subheaderContainerCSSClasses"
-    class="d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap"
-  >
+<div class="subheader py-2 py-lg-4" id="kt_subheader" [ngClass]="subheaderCSSClasses">
+  <div [ngClass]="subheaderContainerCSSClasses" class="d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
     <!--begin::Info-->
     <div class="d-flex align-items-center flex-wrap mr-2">
       <ng-container *ngIf="subheaderMobileToggle">
         <!--begin::Mobile Toggle-->
-        <button
-          class="burger-icon burger-icon-left mr-4 d-inline-block d-lg-none"
-          id="kt_subheader_mobile_toggle"
-        >
+        <button class="burger-icon burger-icon-left mr-4 d-inline-block d-lg-none" id="kt_subheader_mobile_toggle">
           <span></span>
         </button>
         <!--end::Mobile Toggle-->
       </ng-container>
 
       <!--begin::Actions-->
-      <a
-        class="btn btn-light-danger font-weight-bolder btn-sm mr-2 cursor-pointer"
-      >
-        Reports
-      </a>
-      <a
-        class="btn btn-light-success font-weight-bolder btn-sm mr-2 cursor-pointer"
-      >
-        Import
-      </a>
+      <a class="btn btn-light-danger font-weight-bolder btn-sm mr-2 cursor-pointer"> Reports </a>
+      <a class="btn btn-light-success font-weight-bolder btn-sm mr-2 cursor-pointer"> Import </a>
       <!--end::Actions-->
 
       <!--begin::Inputs-->
@@ -39,11 +21,7 @@
         <input type="text" class="form-control pl-4" placeholder="Search..." />
         <div class="input-group-append">
           <span class="input-group-text">
-            <span
-              [inlineSVG]="'./assets/media/svg/icons/General/Search.svg'"
-              cacheSVG="true"
-              class="svg-icon svg-icon-md"
-            ></span>
+            <span [inlineSVG]="'./assets/media/svg/icons/General/Search.svg'" [cacheSVG]="true" class="svg-icon svg-icon-md"></span>
           </span>
         </div>
       </div>
@@ -62,21 +40,11 @@
           title="Select dashboard daterange"
           data-placement="left"
         >
+          <span class="text-muted font-weight-bold mr-2" id="kt_dashboard_daterangepicker_title">Today</span>
+          <span class="text-primary font-weight-bold" id="kt_dashboard_daterangepicker_date">Aug 16</span>
           <span
-            class="text-muted font-weight-bold mr-2"
-            id="kt_dashboard_daterangepicker_title"
-            >Today</span
-          >
-          <span
-            class="text-primary font-weight-bold"
-            id="kt_dashboard_daterangepicker_date"
-            >Aug 16</span
-          >
-          <span
-            [inlineSVG]="
-              './assets/media/svg/icons/Communication/Chat-check.svg'
-            "
-            cacheSVG="true"
+            [inlineSVG]="'./assets/media/svg/icons/Communication/Chat-check.svg'"
+            [cacheSVG]="true"
             class="svg-icon svg-icon-sm svg-icon-primary ml-1"
           ></span>
         </a>
@@ -84,24 +52,16 @@
       </ng-container>
 
       <!--begin::Actions-->
-      <a
-        class="btn btn-light btn-hover-primary btn-sm btn-icon mr-2 cursor-pointer"
-      >
+      <a class="btn btn-light btn-hover-primary btn-sm btn-icon mr-2 cursor-pointer">
         <i class="flaticon2-file text-muted"></i>
       </a>
-      <a
-        class="btn btn-light btn-hover-primary btn-sm btn-icon mr-2 cursor-pointer"
-      >
+      <a class="btn btn-light btn-hover-primary btn-sm btn-icon mr-2 cursor-pointer">
         <i class="flaticon-download-1 text-muted"></i>
       </a>
-      <a
-        class="btn btn-light btn-hover-primary btn-sm btn-icon mr-2 cursor-pointer"
-      >
+      <a class="btn btn-light btn-hover-primary btn-sm btn-icon mr-2 cursor-pointer">
         <i class="flaticon2-fax text-muted"></i>
       </a>
-      <a
-        class="btn btn-light btn-hover-primary btn-sm btn-icon mr-2 cursor-pointer"
-      >
+      <a class="btn btn-light btn-hover-primary btn-sm btn-icon mr-2 cursor-pointer">
         <i class="flaticon2-settings text-muted"></i>
       </a>
       <!--end::Actions-->
@@ -124,10 +84,7 @@
         >
           <i class="ki ki-plus icon-1x"></i>
         </a>
-        <div
-          ngbDropdownMenu
-          class="dropdown-menu p-0 m-0 dropdown-menu-md dropdown-menu-right"
-        >
+        <div ngbDropdownMenu class="dropdown-menu p-0 m-0 dropdown-menu-md dropdown-menu-right">
           <app-dropdown-menu2></app-dropdown-menu2>
         </div>
       </div>
