--- a/BackEnd/JeeAccount/src/app/_metronic/partials/layout/subheader/subheader6/subheader6.component.html
+++ b/BackEnd/JeeAccount/src/app/_metronic/partials/layout/subheader/subheader6/subheader6.component.html
@@ -1,21 +1,11 @@
 <!--begin::Subheader-->
-<div
-  class="subheader py-3 py-lg-8"
-  [ngClass]="subheaderCSSClasses"
-  id="kt_subheader"
->
-  <div
-    [ngClass]="subheaderContainerCSSClasses"
-    class="d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap"
-  >
+<div class="subheader py-3 py-lg-8" [ngClass]="subheaderCSSClasses" id="kt_subheader">
+  <div [ngClass]="subheaderContainerCSSClasses" class="d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
     <!--begin::Info-->
     <div class="d-flex align-items-center mr-1">
       <ng-container *ngIf="subheaderMobileToggle">
         <!--begin::Mobile Toggle-->
-        <button
-          class="burger-icon burger-icon-left mr-4 d-inline-block d-lg-none"
-          id="kt_subheader_mobile_toggle"
-        >
+        <button class="burger-icon burger-icon-left mr-4 d-inline-block d-lg-none" id="kt_subheader_mobile_toggle">
           <span></span>
         </button>
         <!--end::Mobile Toggle-->
@@ -25,9 +15,7 @@
       <div class="d-flex align-items-baseline flex-wrap mr-5">
         <!--begin::Page Title-->
         <ng-container *ngIf="title$ | async as _title">
-          <h2
-            class="d-flex align-items-center text-dark font-weight-bold my-1 mr-3"
-          >
+          <h2 class="d-flex align-items-center text-dark font-weight-bold my-1 mr-3">
             {{ _title }}
             <ng-container *ngIf="subheaderDisplayDesc">
               <ng-container *ngIf="description$ | async as _description">
@@ -38,14 +26,8 @@
         </ng-container>
         <!--end::Page Title-->
         <!--begin::Breadcrumb-->
-        <ul
-          class="breadcrumb breadcrumb-transparent breadcrumb-dot font-weight-bold my-2 p-0"
-        >
-          <li
-            class="breadcrumb-item"
-            *ngFor="let bc of breadcrumbs$ | async"
-            routerLinkActive="active"
-          >
+        <ul class="breadcrumb breadcrumb-transparent breadcrumb-dot font-weight-bold my-2 p-0">
+          <li class="breadcrumb-item" *ngFor="let bc of breadcrumbs$ | async" routerLinkActive="active">
             <a [routerLink]="bc.linkPath" class="text-muted">
               {{ bc.linkText }}
             </a>
@@ -60,14 +42,8 @@
     <!--begin::Toolbar-->
     <div class="d-flex align-items-center flex-wrap">
       <!--begin::Button-->
-      <a
-        class="btn btn-primary btn-fixed-height font-weight-bold px-2 px-lg-5 mr-2"
-      >
-        <span
-          [inlineSVG]="'./assets/media/svg/icons/Communication/Add-user.svg'"
-          cacheSVG="true"
-          class="svg-icon svg-icon-lg"
-        ></span>
+      <a class="btn btn-primary btn-fixed-height font-weight-bold px-2 px-lg-5 mr-2">
+        <span [inlineSVG]="'./assets/media/svg/icons/Communication/Add-user.svg'" [cacheSVG]="true" class="svg-icon svg-icon-lg"></span>
         <span class="d-none d-md-inline">New Member</span>
       </a>
       <!--end::Button-->
@@ -88,32 +64,17 @@
           aria-expanded="false"
           ngbDropdownToggle
         >
-          <span
-            [inlineSVG]="'./assets/media/svg/icons/Files/File.svg'"
-            cacheSVG="true"
-            class="svg-icon svg-icon-lg"
-          ></span>
+          <span [inlineSVG]="'./assets/media/svg/icons/Files/File.svg'" [cacheSVG]="true" class="svg-icon svg-icon-lg"></span>
           <span class="d-none d-md-inline">New Report</span>
         </a>
-        <div
-          class="dropdown-menu p-0 m-0 dropdown-menu-md dropdown-menu-right"
-          ngbDropdownMenu
-        >
+        <div class="dropdown-menu p-0 m-0 dropdown-menu-md dropdown-menu-right" ngbDropdownMenu>
           <app-dropdown-menu1></app-dropdown-menu1>
         </div>
       </div>
       <!--end::Dropdown-->
       <!--begin::Button-->
-      <a
-        class="btn btn-primary btn-icon font-weight-bold"
-        data-toggle="modal"
-        data-target="#kt_chat_modal"
-      >
-        <span
-          [inlineSVG]="'./assets/media/svg/icons/Communication/Group-chat.svg'"
-          cacheSVG="true"
-          class="svg-icon svg-icon-lg"
-        ></span>
+      <a class="btn btn-primary btn-icon font-weight-bold" data-toggle="modal" data-target="#kt_chat_modal">
+        <span [inlineSVG]="'./assets/media/svg/icons/Communication/Group-chat.svg'" [cacheSVG]="true" class="svg-icon svg-icon-lg"></span>
       </a>
       <!--end::Button-->
     </div>
