--- a/BackEnd/JeeAccount/src/app/pages/_layout/components/header/header-menu-dynamic/header-menu-dynamic.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/_layout/components/header/header-menu-dynamic/header-menu-dynamic.component.html
@@ -2,11 +2,7 @@
   <!-- begin::Header Nav -->
   <ul class="menu-nav" [ngClass]="ulCSSClasses">
     <ng-container *ngFor="let item of menuConfig.items">
-      <ng-container
-        *ngIf="item.title"
-        [ngTemplateOutlet]="menu1LevelTemplate"
-        [ngTemplateOutletContext]="{ item: item }"
-      ></ng-container>
+      <ng-container *ngIf="item.title" [ngTemplateOutlet]="menu1LevelTemplate" [ngTemplateOutletContext]="{ item: item }"></ng-container>
     </ng-container>
   </ul>
   <!-- end::Header Nav -->
@@ -19,9 +15,7 @@
     <!-- begin::1 Level -->
     <li class="menu-item menu-item-rel" routerLinkActive="menu-item-active">
       <a class="menu-link" [routerLink]="item.page" routerLinkActive="active">
-        <span class="menu-text" [translate]="item.translate">{{
-          item.title
-        }}</span>
+        <span class="menu-text" [translate]="item.translate">{{ item.title }}</span>
         <ng-container *ngIf="rootArrowEnabled">
           <i class="menu-arrow"></i>
         </ng-container>
@@ -47,9 +41,7 @@
         routerLinkActive="active"
         [ngClass]="{ 'active ': isMenuItemActive(item.page) }"
       >
-        <span class="menu-text" [translate]="item.translate">{{
-          item.title
-        }}</span>
+        <span class="menu-text" [translate]="item.translate">{{ item.title }}</span>
         <i class="menu-arrow"></i>
       </a>
       <div class="menu-submenu menu-submenu-classic menu-submenu-left">
@@ -81,15 +73,10 @@
         [attr.href]="item.page"
         [ngClass]="{ 'active ': isMenuItemActive(item.page) }"
       >
-        <span class="menu-text" [translate]="item.translate">{{
-          item.title
-        }}</span>
+        <span class="menu-text" [translate]="item.translate">{{ item.title }}</span>
         <i class="menu-arrow"></i>
       </a>
-      <div
-        class="menu-submenu menu-submenu-fixed menu-submenu-left"
-        style="width: '1000px'"
-      >
+      <div class="menu-submenu menu-submenu-fixed menu-submenu-left" style="width: '1000px'">
         <div class="menu-subnav">
           <ul class="menu-content">
             <ng-container
@@ -109,15 +96,9 @@
 <ng-template #menu2LevelTemplate let-item="item">
   <!-- begin::if don't have submenu -->
   <ng-container *ngIf="!item.submenu">
-    <li
-      class="menu-item"
-      aria-haspopup="true"
-      routerLinkActive="menu-item-active"
-    >
+    <li class="menu-item" aria-haspopup="true" routerLinkActive="menu-item-active">
       <a class="menu-link" [attr.href]="item.page" routerLinkActive="active"
-        ><span class="menu-text" [translate]="item.translate">{{
-          item.title
-        }}</span></a
+        ><span class="menu-text" [translate]="item.translate">{{ item.title }}</span></a
       >
     </li>
   </ng-container>
@@ -140,15 +121,9 @@
         [ngClass]="{ 'active ': isMenuItemActive(item.page) }"
       >
         <ng-container *ngIf="item.svg">
-          <span
-            [inlineSVG]="item.svg"
-            cacheSVG="true"
-            class="svg-icon menu-icon"
-          ></span>
+          <span [inlineSVG]="item.svg" [cacheSVG]="true" class="svg-icon menu-icon"></span>
         </ng-container>
-        <span class="menu-text" [translate]="item.translate">{{
-          item.title
-        }}</span>
+        <span class="menu-text" [translate]="item.translate">{{ item.title }}</span>
         <i class="menu-arrow"></i>
       </a>
       <div class="menu-submenu menu-submenu-classic menu-submenu-right">
@@ -173,9 +148,7 @@
   <li class="menu-item" routerLinkActive="menu-item-active">
     <a class="menu-link" [routerLink]="item.page" routerLinkActive="active">
       <i class="menu-bullet menu-bullet-dot"><span></span></i>
-      <span class="menu-text" [translate]="item.translate">{{
-        item.title
-      }}</span>
+      <span class="menu-text" [translate]="item.translate">{{ item.title }}</span>
     </a>
   </li>
   <!-- end::3 Level -->
@@ -187,9 +160,7 @@
   <li class="menu-item">
     <h3 class="menu-heading menu-toggle">
       <i class="menu-bullet menu-bullet-dot"><span></span></i>
-      <span class="menu-text" [translate]="item.translate">{{
-        item.title
-      }}</span>
+      <span class="menu-text" [translate]="item.translate">{{ item.title }}</span>
       <i class="menu-arrow"></i>
     </h3>
     <ul class="menu-inner">
