--- a/BackEnd/JeeAccount/src/app/pages/_layout/components/topbar/topbar.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/_layout/components/topbar/topbar.component.html
@@ -9,7 +9,7 @@
     <!--begin::Notifications-->
     <div class="topbar-item">
       <div class="btn btn-icon btn-icon-mobile btn-clean btn-lg mr-1 pulse pulse-primary" id="kt_quick_notifications_toggle">
-        <!-- <span [inlineSVG]="'./assets/media/svg/icons/Code/Compiling.svg'" cacheSVG="true"
+        <!-- <span [inlineSVG]="'./assets/media/svg/icons/Code/Compiling.svg'" [cacheSVG]="true"
       class="svg-icon svg-icon-xl svg-icon-primary"></span> -->
         <i class="flaticon2-bell-2" style="color: #3699ff"></i>
         <span class="pulse-ring"></span>
@@ -23,7 +23,7 @@
     <div class="dropdown" ngbDropdown placement="bottom">
       <div class="topbar-item" data-toggle="dropdown" data-offset="10px,0px" ngbDropdownToggle>
         <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1 pulse pulse-primary">
-          <!-- <span [inlineSVG]="'./assets/media/svg/icons/Code/Compiling.svg'" cacheSVG="true"
+          <!-- <span [inlineSVG]="'./assets/media/svg/icons/Code/Compiling.svg'" [cacheSVG]="true"
         class="svg-icon svg-icon-xl svg-icon-primary"></span> -->
           <i [ngClass]="{ Notify: numberInfo > 0 }" class="flaticon2-bell-2" style="color: #3699ff"></i>
           <span class="badge" *ngIf="numberInfo > 0">{{ numberInfo }}</span>
@@ -46,7 +46,7 @@
       <div class="btn btn-icon btn-clean btn-lg mr-1" id="kt_quick_search_toggle">
         <span
           [inlineSVG]="'./assets/media/svg/icons/Communication/Group-chat.svg'"
-          cacheSVG="true"
+          [cacheSVG]="true"
           class="svg-icon svg-icon-xl svg-icon-primary"
         ></span>
       </div>
@@ -58,7 +58,7 @@
         <div class="btn btn-icon btn-clean btn-lg btn-dropdown mr-1">
           <span
             [inlineSVG]="'./assets/media/svg/icons/Communication/Group-chat.svg'"
-            cacheSVG="true"
+            [cacheSVG]="true"
             class="svg-icon svg-icon-xl svg-icon-primary"
           ></span>
         </div>
@@ -77,7 +77,7 @@
     <div class="btn btn-icon btn-clean btn-lg mr-1" id="kt_quick_panel_toggle">
       <span
         [inlineSVG]="'./assets/media/svg/icons/Communication/Group-chat.svg'"
-        cacheSVG="true"
+        [cacheSVG]="true"
         class="svg-icon svg-icon-xl svg-icon-primary"
       ></span>
     </div>
@@ -93,7 +93,7 @@
       <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1" id="kt_quick_actions_toggle">
         <span
           [inlineSVG]="'./assets/media/svg/icons/Layout/Layout-4-blocks.svg'"
-          cacheSVG="true"
+          [cacheSVG]="true"
           class="svg-icon svg-icon-xl svg-icon-primary"
         ></span>
         <!-- <i class="flaticon2-menu-2" style="color: #3699ff;"></i> -->
@@ -108,7 +108,7 @@
         <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1">
           <span
             [inlineSVG]="'./assets/media/svg/icons/Layout/Layout-4-blocks.svg'"
-            cacheSVG="true"
+            [cacheSVG]="true"
             class="svg-icon svg-icon-xl svg-icon-primary"
           ></span>
           <!-- <i class="flaticon2-menu-2" style="color: #3699ff;"></i> -->
@@ -127,7 +127,7 @@
     <!--begin::Cart-->
     <!-- <div class="topbar-item">
   <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1" id="kt_quick_cart_toggle">
-    <span [inlineSVG]="'./assets/media/svg/icons/Shopping/Cart3.svg'" cacheSVG="true"
+    <span [inlineSVG]="'./assets/media/svg/icons/Shopping/Cart3.svg'" [cacheSVG]="true"
       class="svg-icon svg-icon-xl svg-icon-primary"></span>
   </div>
 </div> -->
@@ -138,7 +138,7 @@
     <!-- <div class="dropdown" ngbDropdown placement="bottom">
   <div class="topbar-item" data-toggle="dropdown" data-offset="10px,0px" ngbDropdownToggle>
     <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1">
-      <span [inlineSVG]="'./assets/media/svg/icons/Shopping/Cart3.svg'" cacheSVG="true"
+      <span [inlineSVG]="'./assets/media/svg/icons/Shopping/Cart3.svg'" [cacheSVG]="true"
         class="svg-icon svg-icon-xl svg-icon-primary"></span>
     </div>
   </div>
@@ -168,21 +168,21 @@
         >
           <span class="symbol symbol-lg-35 symbol-25 symbol-light-success mr-3">
             <ngx-avatar
-              src="{{ _user.user.customData.personalInfo.Avatar }}"
-              *ngIf="_user.user.customData.personalInfo.Avatar; else bindText"
+              src="{{ _user['user']['customData']['personalInfo'].Avatar }}"
+              *ngIf="_user['user']['customData']['personalInfo'].Avatar; else bindText"
             >
             </ngx-avatar>
             <ng-template #bindText>
               <ngx-avatar
-                textSizeRatio="2.5"
-                [name]="_user.user.customData.personalInfo.Name.slice(0, 1)"
-                bgColor="{{ _user.user.customData.personalInfo.BgColor }}"
+                [textSizeRatio]="2.5"
+                [name]="_user['user']['customData']['personalInfo'].Name.slice(0, 1)"
+                bgColor="{{ _user['user']['customData']['personalInfo'].BgColor }}"
               >
               </ngx-avatar>
             </ng-template>
           </span>
           <span class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">
-            {{ _user.user.customData.personalInfo.Name }}
+            {{ _user['user']['customData']['personalInfo'].Name }}
           </span>
         </div>
       </div>
